Nav icons resized, css class added to refactor

--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,10 @@ section {
   padding: 20px 16px;
 }
 
+.navIcons {
+  width: 23px;
+}
+
 /* ************************************************************
 ***************************************************************
 --- Search Form ---
