--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,11 @@ section {
   .input-group {
     flex-direction: column;
   }
+
+  .input-group.error .error-msg {
+    bottom: 30px;
+  }
+
   .input-group > .form-control,
   .btn-form-submit {
     width: 100%;
