--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ section {
 ***************************************************************
 ************************************************************ */
 
+
 .btn-form-submit {
   font-size: 24px;
   font-weight: bold;
@@ -118,6 +119,11 @@ section {
   -webkit-appearance: none;
   width: 180px;
   margin-left: 20px;
+}
+
+.btn-form-submit:hover {
+  background-image: linear-gradient(225deg, #ffffff 0%, #bbbbbb 100%);
+  box-shadow: 0 3px 0 0 #616161, inset 0 1px 0 0 #FFFFFF;
 }
 
 .input-group > .form-control {
