Styling for loading section

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 --------------------------------------------------------
 --| General
 --| Navbar
+--| loading
 --| Search Form
 --| [SECTION] Above the Fold 
 --| [SECTION] Features
@@ -98,6 +99,32 @@ section {
 
 .nav-icons-size {
   width: 23px;
+}
+
+/* ************************************************************
+***************************************************************
+--- loading ---
+***************************************************************
+************************************************************ */
+.hide {
+  display: none;
+}
+
+.loading {
+  margin-top: 10%;
+  color: #004A80;
+  height: 60vh;
+}
+
+.loading > div > img {
+  width: 100px;
+}
+
+@media (max-width: 767px) {
+  .loading {
+    margin-top: 15%;
+    height: 50vh;
+  }
 }
 
 /* ************************************************************
