--- a/css/style.css
+++ b/css/style.css
@@ -122,8 +122,7 @@ section {
 }
 
 .btn-form-submit:hover {
-  background-image: linear-gradient(225deg, #ffffff 0%, #bbbbbb 100%);
-  box-shadow: 0 3px 0 0 #616161, inset 0 1px 0 0 #FFFFFF;
+  background-image: linear-gradient(225deg, #F2DA56 0%, #F2DA56 100%);
 }
 
 .input-group > .form-control {
@@ -170,6 +169,32 @@ section {
   line-height: normal;
 }
 
+.btn-warning{
+  color: #004A80;
+  font-size: x-small;
+  font-weight: bold;
+}
+
+.btn-outline-warning {
+  color: #F6BC25;
+  font-size: x-small;
+  font-weight: bold;
+  border-width: 3px;
+}
+
+.actual-search:before {
+  content: "";
+  position: absolute;
+  margin-top: 18px;
+  margin-left: 35px;
+  width: 0;
+  height: 0;
+  border-top: 7px solid transparent;
+  border-right: 7px solid #F6BC25;
+  border-bottom: 7px solid transparent;
+  transform: rotate(-90deg);
+}
+
 @media (max-width: 767px) {
   .input-group {
     flex-direction: column;
@@ -188,6 +213,18 @@ section {
   }
   .btn-form-submit {
     margin: 12px 0 0 0;
+  }
+
+  #type-search-text{
+    display: none;
+  }
+
+  .btn-outline-warning {
+    width: 48%;
+  }
+
+  .btn-warning{
+    width: 48%;
   }
 }
 
