--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,11 @@ section {
   background-image: linear-gradient(225deg, #F2DA56 0%, #F2DA56 100%);
 }
 
+.btn-form-submit:active {
+  background-image: linear-gradient(225deg, #F2DA56 0%, #F6BC25 100%) !important;
+}
+
+
 .input-group > .form-control {
   height: 70px;
   background: #FFF;
