--- a/css/style.css
+++ b/css/style.css
@@ -455,18 +455,19 @@ section {
 
 .footer {
   padding: 16px 0;
+  background-color: #004A80;
 }
 
 .footer p {
   font-size: 15px;
-  color: #999;
+  color: #FFFFFF;
   line-height: 20px;
 }
 
 .footer a {
   font-size: 14px;
   font-weight: bold;
-  color: #004A80;
+  color: #FFFFFF;
 }
 
 .footer a:first-of-type:after {
